tests/ui/consts/const-eval/const-eval-query-stack.stderr
error: internal compiler error[E0080]: attempt to divide `1_i32` by zero
  --> $DIR/const-eval-query-stack.rs:17:16
   |
LL | const X: i32 = 1 / 0;
   |                ^^^^^ evaluation of `X` failed here


note: please make sure that you have updated to the latest nightly

query stack during panic:
#0 [eval_to_allocation_raw] const-evaluating + checking `X`
 - compiler/rustc_const_eval/src/const_eval/eval_queries.rs:LL:CC
#1 [eval_to_const_value_raw] simplifying constant for the type system `X`
 - compiler/rustc_hir_analysis/src/lib.rs:LL:CC
#2 [analysis] running analysis passes on crate `const_eval_query_stack`
 - compiler/rustc_driver_impl/src/lib.rs:LL:CC
end of query stack
